--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <dimen name="expanded_title_margin_start">70dp</dimen>
     <dimen name="default_margin">24dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="default_text_size">16sp</dimen>
